# example-avr-embassy

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  mutex.rs
