[package]
name = "example-avr-embassy"
version = "0.1.0"
authors = ["sodo <djdisodo@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "example-avr-embassy"
test = false
bench = false

[dependencies]
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
itoa = "1.0.9"
embassy-time = "0.1.5"
embassy-executor = { path = "../embassy/embassy-executor", features = ["nightly", "arch-avr", "executor-thread"] }
embassy-sync = "0.4.0"
portable-atomic = "1.5.1"

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal.git"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-uno", "critical-section-impl"]

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal.git"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"

[dependencies.avr_tc0_embassy_time]
path = "../avr_tc0_embassy_time"
features = ["default16MHz", "queue8"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
